dev city serach logic

--- a/src/index.html
+++ b/src/index.html
@@ -2989,37 +2989,37 @@
             <div class="popup-content city__select__content">
                 <div class="flex-col city__select__col mb24">
 
-                        <a data-type="city-name" class="a-blue-hover">Москва</a>
-                        <a data-type="city-name" class="a-blue-hover">г. Санкт-Петербург</a>
-                        <a data-type="city-name" class="a-blue-hover">г. Нижний Новгород</a>
-                        <a data-type="city-name" class="a-blue-hover">г. Казань</a>
+                        <a data-type="city-name" data-popular-city="t" class="a-blue-hover">Москва</a>
+                        <a data-type="city-name" data-popular-city="t" class="a-blue-hover">г. Санкт-Петербург</a>
+                        <a data-type="city-name" data-popular-city="t" class="a-blue-hover">г. Нижний Новгород</a>
+                        <a data-type="city-name" data-popular-city="t" class="a-blue-hover">г. Казань</a>
 
 
                 </div>
 
                 <div class="flex-col city__select__col mb24">
-                    <div class="black-text head-text mb12">А</div>
+                    <div data-type="city-tag" class="black-text head-text mb12">А</div>
                     <a data-type="city-name" class="a-blue-hover">г. Москва</a>
                     <a data-type="city-name" class="a-blue-hover">г. Санкт-Петербург</a>
                     <a data-type="city-name" class="a-blue-hover">г. Нижний Новгород</a>
                     <a data-type="city-name" class="a-blue-hover">г. Казань</a>
                 </div>
                 <div class="flex-col city__select__col mb24">
-                    <div class="black-text head-text mb12">А</div>
+                    <div class="black-text head-text mb12">Б</div>
                     <a data-type="city-name" class="a-blue-hover">г. Москва</a>
                     <a data-type="city-name" class="a-blue-hover">г. Санкт-Петербург</a>
                     <a data-type="city-name" class="a-blue-hover">г. Нижний Новгород</a>
                     <a data-type="city-name" class="a-blue-hover">г. Казань</a>
                 </div>
                 <div class="flex-col city__select__col mb24">
-                    <div class="black-text head-text mb12">А</div>
+                    <div class="black-text head-text mb12">В</div>
                     <a data-type="city-name" class="a-blue-hover">г. Москва</a>
                     <a data-type="city-name" class="a-blue-hover">г. Санкт-Петербург</a>
                     <a data-type="city-name" class="a-blue-hover">г. Нижний Новгород</a>
                     <a data-type="city-name" class="a-blue-hover">г. Казань</a>
                 </div>
                 <div class="flex-col city__select__col mb24">
-                    <div class="black-text head-text mb12">А</div>
+                    <div class="black-text head-text mb12">Г</div>
                     <a data-type="city-name" class="a-blue-hover">г. Москва</a>
                     <a data-type="city-name" class="a-blue-hover">г. Санкт-Петербург</a>
                     <a data-type="city-name" class="a-blue-hover">г. Нижний Новгород</a>
