--- a/src/index.html
+++ b/src/index.html
@@ -2999,7 +2999,7 @@
 
                 <div class="flex-col city__select__col mb24">
                     <div data-type="city-tag" class="black-text head-text mb12">А</div>
-                    <a data-type="city-name" class="a-blue-hover">г. Москва</a>
+                    <a data-type="city-name" class="a-blue-hover">г. Адлер</a>
                     <a data-type="city-name" class="a-blue-hover">г. Санкт-Петербург</a>
                     <a data-type="city-name" class="a-blue-hover">г. Нижний Новгород</a>
                     <a data-type="city-name" class="a-blue-hover">г. Казань</a>
