make city search logic

--- a/src/index.html
+++ b/src/index.html
@@ -2989,7 +2989,7 @@
             <div class="popup-content city__select__content">
                 <div class="flex-col city__select__col mb24">
 
-                        <a data-type="city-name" data-popular-city="t" class="a-blue-hover">Москва</a>
+                        <a data-type="city-name" data-popular-city="t" class="a-blue-hover">г. Москва</a>
                         <a data-type="city-name" data-popular-city="t" class="a-blue-hover">г. Санкт-Петербург</a>
                         <a data-type="city-name" data-popular-city="t" class="a-blue-hover">г. Нижний Новгород</a>
                         <a data-type="city-name" data-popular-city="t" class="a-blue-hover">г. Казань</a>
@@ -3000,14 +3000,14 @@
                 <div class="flex-col city__select__col mb24">
                     <div data-type="city-tag" class="black-text head-text mb12">А</div>
                     <a data-type="city-name" class="a-blue-hover">г. Адлер</a>
-                    <a data-type="city-name" class="a-blue-hover">г. Санкт-Петербург</a>
+                    <a data-type="city-name" class="a-blue-hover">г. Анапа</a>
                     <a data-type="city-name" class="a-blue-hover">г. Нижний Новгород</a>
                     <a data-type="city-name" class="a-blue-hover">г. Казань</a>
                 </div>
                 <div class="flex-col city__select__col mb24">
                     <div class="black-text head-text mb12">Б</div>
-                    <a data-type="city-name" class="a-blue-hover">г. Москва</a>
-                    <a data-type="city-name" class="a-blue-hover">г. Санкт-Петербург</a>
+                    <a data-type="city-name" class="a-blue-hover">г. Барнаул</a>
+                    <a data-type="city-name" class="a-blue-hover">г. Бавлы</a>
                     <a data-type="city-name" class="a-blue-hover">г. Нижний Новгород</a>
                     <a data-type="city-name" class="a-blue-hover">г. Казань</a>
                 </div>
