--- a/src/index.html
+++ b/src/index.html
@@ -3013,17 +3013,17 @@
                 </div>
                 <div class="flex-col city__select__col mb24">
                     <div class="black-text head-text mb12">В</div>
-                    <a data-type="city-name" class="a-blue-hover">г. Москва</a>
-                    <a data-type="city-name" class="a-blue-hover">г. Санкт-Петербург</a>
-                    <a data-type="city-name" class="a-blue-hover">г. Нижний Новгород</a>
-                    <a data-type="city-name" class="a-blue-hover">г. Казань</a>
+                    <a data-type="city-name" class="a-blue-hover">г. Волгоград</a>
+                    <a data-type="city-name" class="a-blue-hover">г. Вологда</a>
+                    <a data-type="city-name" class="a-blue-hover">г. Воркута</a>
+                    <a data-type="city-name" class="a-blue-hover">г. Вязники</a>
                 </div>
                 <div class="flex-col city__select__col mb24">
                     <div class="black-text head-text mb12">Г</div>
-                    <a data-type="city-name" class="a-blue-hover">г. Москва</a>
-                    <a data-type="city-name" class="a-blue-hover">г. Санкт-Петербург</a>
-                    <a data-type="city-name" class="a-blue-hover">г. Нижний Новгород</a>
-                    <a data-type="city-name" class="a-blue-hover">г. Казань</a>
+                    <a data-type="city-name" class="a-blue-hover">г. Грозный</a>
+                    <a data-type="city-name" class="a-blue-hover">г. Голицин</a>
+                    <a data-type="city-name" class="a-blue-hover">г. Горный</a>
+                    <a data-type="city-name" class="a-blue-hover">г. Гоголь</a>
                 </div>
             </div>
 
