move inputs autocorrect tp validate.js

--- a/src/index.html
+++ b/src/index.html
@@ -3031,7 +3031,7 @@
                 <div class="black-text head-text">
                     Не нашли свой город?
                 </div>
-                <input data-type="city-search" class="input-search" type="text" name="search"
+                <input data-type="city-search" data-lang="ru" class="input-search" type="text" name="search"
                                 placeholder="Введите название вашего города" autocomplete="off"></input>
             </div>
 
