Add city search error

--- a/src/index.html
+++ b/src/index.html
@@ -2996,7 +2996,6 @@
 
 
                 </div>
-
                 <div class="flex-col city__select__col mb24">
                     <div data-type="city-tag" class="black-text head-text mb12">А</div>
                     <a data-type="city-name" class="a-blue-hover">г. Адлер</a>
@@ -3025,6 +3024,14 @@
                     <a data-type="city-name" class="a-blue-hover">г. Горный</a>
                     <a data-type="city-name" class="a-blue-hover">г. Гоголь</a>
                 </div>
+
+                <div data-type="city-search-error" class="popup__error__contaner">
+                    <div class="mr12">
+                        <span class="icon-error">
+                        </span>
+                    </div>
+                    <p class="head-text">Ничего не найдено</p>
+                </div>
             </div>
 
             <div class="popup-footer">
@@ -3043,10 +3050,10 @@
     <script type="text/javascript" src="scripts/main.js"></script>
     <script type="text/javascript" src="scripts/modules/radioButtons.js"></script>
     <script type="text/javascript" src="scripts/modules/search.js"></script>
+    <script type="text/javascript" src="scripts/modules/validate.js"></script>
     <script type="text/javascript" src="scripts/modules/popups.js"></script>
     <script type="text/javascript" src="scripts/modules/tabs.js"></script>
     <script type="text/javascript" src="scripts/modules/forms.js"></script>
-    <script type="text/javascript" src="scripts/modules/validate.js"></script>
 
     <!-- <script src="scripts/vendor/owlcarousel/owl.carousel.min.js"></script> -->
 </body>
