delete old commented code

--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,7 @@
                         <div class="menu_right">
                             <div data-action='citySelect__popup_open' class="menu_drop drop-active mr16">
                                 <span class="icon-geo icon-head-menu-2"></span>
-                                <a class=" button_black a-blue-hover ">Набережные Челны</a>
+                                <a data-type="city" class="button_black a-blue-hover ">Набережные Челны</a>
                                 <span class="icon-drop icon-dorp-2"></span>
 
                                 
