--- a/src/index.html
+++ b/src/index.html
@@ -2988,7 +2988,7 @@
             </div>
             <div class="popup-content city__select__content">
                 <div class="flex-col city__select__col mb24">
-
+                    <div data-type="city-tag" class="black-text head-text mb12">Популярные города</div>
                         <a data-type="city-name" data-popular-city="t" class="a-blue-hover">г. Москва</a>
                         <a data-type="city-name" data-popular-city="t" class="a-blue-hover">г. Санкт-Петербург</a>
                         <a data-type="city-name" data-popular-city="t" class="a-blue-hover">г. Нижний Новгород</a>
@@ -3049,11 +3049,11 @@
     <script src="https://unpkg.com/imask"></script>
     <script type="text/javascript" src="scripts/main.js"></script>
     <script type="text/javascript" src="scripts/modules/radioButtons.js"></script>
-    <script type="text/javascript" src="scripts/modules/search.js"></script>
     <script type="text/javascript" src="scripts/modules/validate.js"></script>
     <script type="text/javascript" src="scripts/modules/popups.js"></script>
     <script type="text/javascript" src="scripts/modules/tabs.js"></script>
     <script type="text/javascript" src="scripts/modules/forms.js"></script>
+
 
     <!-- <script src="scripts/vendor/owlcarousel/owl.carousel.min.js"></script> -->
 </body>
