--- a/src/index.html
+++ b/src/index.html
@@ -3000,8 +3000,8 @@
                     <div data-type="city-tag" class="black-text head-text mb12">А</div>
                     <a data-type="city-name" class="a-blue-hover">г. Адлер</a>
                     <a data-type="city-name" class="a-blue-hover">г. Анапа</a>
-                    <a data-type="city-name" class="a-blue-hover">г. Нижний Новгород</a>
-                    <a data-type="city-name" class="a-blue-hover">г. Казань</a>
+                    <a data-type="city-name" class="a-blue-hover">г. Абакан</a>
+                    <a data-type="city-name" class="a-blue-hover">г. Арзамас</a>
                 </div>
                 <div class="flex-col city__select__col mb24">
                     <div class="black-text head-text mb12">Б</div>
