--- a/src/index.html
+++ b/src/index.html
@@ -3051,6 +3051,7 @@
     <script type="text/javascript" src="scripts/modules/radioButtons.js"></script>
     <script type="text/javascript" src="scripts/modules/validate.js"></script>
     <script type="text/javascript" src="scripts/modules/popups.js"></script>
+    <script type="text/javascript" src="scripts/modules/cityChoose.js"></script>
     <script type="text/javascript" src="scripts/modules/tabs.js"></script>
     <script type="text/javascript" src="scripts/modules/forms.js"></script>
 
