--- a/src/index.html
+++ b/src/index.html
@@ -69,14 +69,14 @@
                         <div class="menu_right">
                             <div data-action='citySelect__popup_open' class="menu_drop drop-active mr16">
                                 <span class="icon-geo icon-head-menu-2"></span>
-                                <a data-type="city" class="button_black a-blue-hover ">Набережные Челны</a>
+                                <a data-type="my_city" class="button_black a-blue-hover ">Набережные Челны</a>
                                 <span class="icon-drop icon-dorp-2"></span>
 
                                 
                             </div>
                             <div class="city-submit-window">
                                 <div class="city-submit-window-content">
-                                    <p class="city-submit-text black-text mb16">Ваш город <b>Набережные Челны?</b>
+                                    <p class="city-submit-text black-text mb16">Ваш город <b data-type="my_city">Набережные Челны?</b>
                                     </p>
                                     <button class="submit-close standart-btn mr16">Да</button>
                                     <a data-action='citySelect__popup_open' class="blue-txt-link">Выбрать другой</a>
@@ -2989,40 +2989,40 @@
             <div class="popup-content city__select__content">
                 <div class="flex-col city__select__col mb24">
                     <div data-type="city-tag" class="black-text head-text mb12">Популярные города</div>
-                        <a data-type="city-name" data-popular-city="t" class="a-blue-hover">г. Москва</a>
-                        <a data-type="city-name" data-popular-city="t" class="a-blue-hover">г. Санкт-Петербург</a>
-                        <a data-type="city-name" data-popular-city="t" class="a-blue-hover">г. Нижний Новгород</a>
-                        <a data-type="city-name" data-popular-city="t" class="a-blue-hover">г. Казань</a>
+                        <a data-type="city-name" data-popular-city="t" class="a-blue-hover">Москва</a>
+                        <a data-type="city-name" data-popular-city="t" class="a-blue-hover">Санкт-Петербург</a>
+                        <a data-type="city-name" data-popular-city="t" class="a-blue-hover">Нижний Новгород</a>
+                        <a data-type="city-name" data-popular-city="t" class="a-blue-hover">Казань</a>
 
 
                 </div>
                 <div class="flex-col city__select__col mb24">
                     <div data-type="city-tag" class="black-text head-text mb12">А</div>
-                    <a data-type="city-name" class="a-blue-hover">г. Адлер</a>
-                    <a data-type="city-name" class="a-blue-hover">г. Анапа</a>
-                    <a data-type="city-name" class="a-blue-hover">г. Абакан</a>
-                    <a data-type="city-name" class="a-blue-hover">г. Арзамас</a>
+                    <a data-type="city-name" class="a-blue-hover">Адлер</a>
+                    <a data-type="city-name" class="a-blue-hover">Анапа</a>
+                    <a data-type="city-name" class="a-blue-hover">Абакан</a>
+                    <a data-type="city-name" class="a-blue-hover">Арзамас</a>
                 </div>
                 <div class="flex-col city__select__col mb24">
                     <div class="black-text head-text mb12">Б</div>
-                    <a data-type="city-name" class="a-blue-hover">г. Барнаул</a>
-                    <a data-type="city-name" class="a-blue-hover">г. Бавлы</a>
-                    <a data-type="city-name" class="a-blue-hover">г. Нижний Новгород</a>
-                    <a data-type="city-name" class="a-blue-hover">г. Казань</a>
+                    <a data-type="city-name" class="a-blue-hover">Барнаул</a>
+                    <a data-type="city-name" class="a-blue-hover">Бавлы</a>
+                    <a data-type="city-name" class="a-blue-hover">Нижний Новгород</a>
+                    <a data-type="city-name" class="a-blue-hover">Казань</a>
                 </div>
                 <div class="flex-col city__select__col mb24">
                     <div class="black-text head-text mb12">В</div>
-                    <a data-type="city-name" class="a-blue-hover">г. Волгоград</a>
-                    <a data-type="city-name" class="a-blue-hover">г. Вологда</a>
-                    <a data-type="city-name" class="a-blue-hover">г. Воркута</a>
-                    <a data-type="city-name" class="a-blue-hover">г. Вязники</a>
+                    <a data-type="city-name" class="a-blue-hover">Волгоград</a>
+                    <a data-type="city-name" class="a-blue-hover">Вологда</a>
+                    <a data-type="city-name" class="a-blue-hover">Воркута</a>
+                    <a data-type="city-name" class="a-blue-hover">Вязники</a>
                 </div>
                 <div class="flex-col city__select__col mb24">
                     <div class="black-text head-text mb12">Г</div>
-                    <a data-type="city-name" class="a-blue-hover">г. Грозный</a>
-                    <a data-type="city-name" class="a-blue-hover">г. Голицин</a>
-                    <a data-type="city-name" class="a-blue-hover">г. Горный</a>
-                    <a data-type="city-name" class="a-blue-hover">г. Гоголь</a>
+                    <a data-type="city-name" class="a-blue-hover">Грозный</a>
+                    <a data-type="city-name" class="a-blue-hover">Голицин</a>
+                    <a data-type="city-name" class="a-blue-hover">Горный</a>
+                    <a data-type="city-name" class="a-blue-hover">Гоголь</a>
                 </div>
 
                 <div data-type="city-search-error" class="popup__error__contaner">
