--- a/src/index.html
+++ b/src/index.html
@@ -218,7 +218,11 @@
     <div class="container">
         <div class="catalog-menu-banner">
             <div class="catalog-menu">
-                <a href="/" class="main-menu-elt">
+
+
+
+                <div href="/" class="main-menu-elt">
+                    <a>
                     <div class="logo-1">
                         <span class="icon-shopping-bag"><span class="path1"></span><span class="path2"></span><span
                                 class="path3"></span><span class="path4"></span><span class="path5"></span><span
@@ -227,7 +231,11 @@
                     </div>
                     <p>Пакеты</p>
                     <span class="icon-drop icon-drop-right icon-arrow-catalog"></span>
-                </a>
+                </div>
+
+
+
+
                 <a href="/" class="main-menu-elt">
                     <div class="logo-1">
                         <span class="icon-gift-box"><span class="path1"></span><span class="path2"></span><span
