start dev submenu and return submenu logic in head

--- a/src/index.html
+++ b/src/index.html
@@ -72,11 +72,12 @@
                                 <a data-type="my_city" class="button_black a-blue-hover ">Набережные Челны</a>
                                 <span class="icon-drop icon-dorp-2"></span>
 
-                                
+
                             </div>
                             <div class="city-submit-window">
                                 <div class="city-submit-window-content">
-                                    <p class="city-submit-text black-text mb16">Ваш город <b data-type="my_city">Набережные Челны?</b>
+                                    <p class="city-submit-text black-text mb16">Ваш город <b
+                                            data-type="my_city">Набережные Челны?</b>
                                     </p>
                                     <button class="submit-close standart-btn mr16">Да</button>
                                     <a data-action='citySelect__popup_open' class="blue-txt-link">Выбрать другой</a>
@@ -218,96 +219,158 @@
     <div class="container">
         <div class="catalog-menu-banner">
             <div class="catalog-menu">
+                <div class="catalog-menu__main-menu">
+                    <div class="main-menu__item">
+                        <a class="main-menu__elt">
+                            <div class="logo-1">
+                                <span class="icon-shopping-bag"><span class="path1"></span><span class="path2"></span><span
+                                        class="path3"></span><span class="path4"></span><span class="path5"></span><span
+                                        class="path6"></span><span class="path7"></span><span class="path8"></span><span
+                                        class="path9"></span><span class="path10"></span></span>
+                            </div>
+                            <p>Пакеты</p>
+                            <span class="icon-drop icon-drop-right icon-arrow-catalog"></span>
+                        </a>
 
-
-
-                <div href="/" class="main-menu-elt">
-                    <a>
-                    <div class="logo-1">
-                        <span class="icon-shopping-bag"><span class="path1"></span><span class="path2"></span><span
-                                class="path3"></span><span class="path4"></span><span class="path5"></span><span
-                                class="path6"></span><span class="path7"></span><span class="path8"></span><span
-                                class="path9"></span><span class="path10"></span></span>
+                        
                     </div>
-                    <p>Пакеты</p>
-                    <span class="icon-drop icon-drop-right icon-arrow-catalog"></span>
+
+                    <div class="main-menu__item">
+                        <a class="main-menu__elt">
+                            <div class="logo-1">
+                                <span class="icon-shopping-bag"><span class="path1"></span><span class="path2"></span><span
+                                        class="path3"></span><span class="path4"></span><span class="path5"></span><span
+                                        class="path6"></span><span class="path7"></span><span class="path8"></span><span
+                                        class="path9"></span><span class="path10"></span></span>
+                            </div>
+                            <p>Подарочная и
+                                цветочная упаковка</p>
+                            <span class="icon-drop icon-drop-right icon-arrow-catalog"></span>
+                        </a>
+                    </div>
+
+                    <div class="main-menu__item">
+                        <a class="main-menu__elt">
+                            <div class="logo-1">
+                                <span class="icon-shopping-bag"><span class="path1"></span><span class="path2"></span><span
+                                        class="path3"></span><span class="path4"></span><span class="path5"></span><span
+                                        class="path6"></span><span class="path7"></span><span class="path8"></span><span
+                                        class="path9"></span><span class="path10"></span></span>
+                            </div>
+                            <p>Одноразовая посуда, контейнеры, лотки</p>
+                            <span class="icon-drop icon-drop-right icon-arrow-catalog"></span>
+                        </a>
+                    </div>
+
+                    <div class="main-menu__item">
+                        <a class="main-menu__elt">
+                            <div class="logo-1">
+                                <span class="icon-shopping-bag"><span class="path1"></span><span class="path2"></span><span
+                                        class="path3"></span><span class="path4"></span><span class="path5"></span><span
+                                        class="path6"></span><span class="path7"></span><span class="path8"></span><span
+                                        class="path9"></span><span class="path10"></span></span>
+                            </div>
+                            <p>Хозтовары</p>
+                            <span class="icon-drop icon-drop-right icon-arrow-catalog"></span>
+                        </a>
+                    </div>
+
+                    <div class="main-menu__item">
+                        <a class="main-menu__elt">
+                            <div class="logo-1">
+                                <span class="icon-shopping-bag"><span class="path1"></span><span class="path2"></span><span
+                                        class="path3"></span><span class="path4"></span><span class="path5"></span><span
+                                        class="path6"></span><span class="path7"></span><span class="path8"></span><span
+                                        class="path9"></span><span class="path10"></span></span>
+                            </div>
+                            <p>Спецодежда и СИЗ</p>
+                            <span class="icon-drop icon-drop-right icon-arrow-catalog"></span>
+                        </a>
+                    </div>
+                    <div class="main-menu__item">
+                        <a class="main-menu__elt">
+                            <div class="logo-1">
+                                <span class="icon-shopping-bag"><span class="path1"></span><span class="path2"></span><span
+                                        class="path3"></span><span class="path4"></span><span class="path5"></span><span
+                                        class="path6"></span><span class="path7"></span><span class="path8"></span><span
+                                        class="path9"></span><span class="path10"></span></span>
+                            </div>
+                            <p>Медицинские расходные материалы</p>
+                            <span class="icon-drop icon-drop-right icon-arrow-catalog"></span>
+                        </a>
+                    </div>
+                    <div class="main-menu__item">
+                        <a class="main-menu__elt">
+                            <div class="logo-1">
+                                <span class="icon-shopping-bag"><span class="path1"></span><span class="path2"></span><span
+                                        class="path3"></span><span class="path4"></span><span class="path5"></span><span
+                                        class="path6"></span><span class="path7"></span><span class="path8"></span><span
+                                        class="path9"></span><span class="path10"></span></span>
+                            </div>
+                            <p>Автокосметика</p>
+                            <span class="icon-drop icon-drop-right icon-arrow-catalog"></span>
+                        </a>
+                    </div>
+                    <div class="main-menu__item">
+                        <a class="main-menu__elt">
+                            <div class="logo-1">
+                                <span class="icon-shopping-bag"><span class="path1"></span><span class="path2"></span><span
+                                        class="path3"></span><span class="path4"></span><span class="path5"></span><span
+                                        class="path6"></span><span class="path7"></span><span class="path8"></span><span
+                                        class="path9"></span><span class="path10"></span></span>
+                            </div>
+                            <p>Товары для офиса и дома</p>
+                            <span class="icon-drop icon-drop-right icon-arrow-catalog"></span>
+                        </a>
+                    </div>
+                    <div class="main-menu__item">
+                        <a class="main-menu__elt">
+                            <div class="logo-1">
+                                <span class="icon-shopping-bag"><span class="path1"></span><span class="path2"></span><span
+                                        class="path3"></span><span class="path4"></span><span class="path5"></span><span
+                                        class="path6"></span><span class="path7"></span><span class="path8"></span><span
+                                        class="path9"></span><span class="path10"></span></span>
+                            </div>
+                            <p>Пакеты</p>
+                            <span class="icon-drop icon-drop-right icon-arrow-catalog"></span>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="catalog-menu__submenu">
+                    <div class="catalog-menu__submenu__elt">
+                        <div class="main-menu__item">
+                            <a class="main-menu__elt">
+                                <div class="logo-1">
+                                    <span class="icon-shopping-bag"><span class="path1"></span><span class="path2"></span><span
+                                            class="path3"></span><span class="path4"></span><span class="path5"></span><span
+                                            class="path6"></span><span class="path7"></span><span class="path8"></span><span
+                                            class="path9"></span><span class="path10"></span></span>
+                                </div>
+                                <p>Пакеты</p>
+                                <span class="icon-drop icon-drop-right icon-arrow-catalog"></span>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="catalog-menu__submenu__elt">
+                        <div class="main-menu__item">
+                            <a class="main-menu__elt">
+                                <div class="logo-1">
+                                    <span class="icon-shopping-bag"><span class="path1"></span><span class="path2"></span><span
+                                            class="path3"></span><span class="path4"></span><span class="path5"></span><span
+                                            class="path6"></span><span class="path7"></span><span class="path8"></span><span
+                                            class="path9"></span><span class="path10"></span></span>
+                                </div>
+                                <p>Пакеты</p>
+                                <span class="icon-drop icon-drop-right icon-arrow-catalog"></span>
+                            </a>
+                        </div>
+                    </div>
                 </div>
 
 
 
 
-                <a href="/" class="main-menu-elt">
-                    <div class="logo-1">
-                        <span class="icon-gift-box"><span class="path1"></span><span class="path2"></span><span
-                                class="path3"></span><span class="path4"></span></span>
-                    </div>
-                    <p>Подарочная и
-                        цветочная упаковка</p>
-                    <span class="icon-drop icon-drop-right"></span>
-                </a>
-                <a href="/" class="main-menu-elt">
-                    <div class="logo-1">
-                        <span class="icon-dish"><span class="path1"></span><span class="path2"></span><span
-                                class="path3"></span><span class="path4"></span><span class="path5"></span><span
-                                class="path6"></span><span class="path7"></span><span class="path8"></span><span
-                                class="path9"></span><span class="path10"></span><span class="path11"></span></span>
-                    </div>
-                    <p>Одноразовая посуда, контейнеры, лотки</p>
-                    <span class="icon-drop icon-drop-right"></span>
-                </a>
-                <a href="/" class="main-menu-elt">
-                    <div class="logo-1">
-                        <span class="icon-clean"><span class="path1"></span><span class="path2"></span><span
-                                class="path3"></span><span class="path4"></span><span class="path5"></span></span>
-                    </div>
-                    <p>Хозтовары</p>
-                    <span class="icon-drop icon-drop-right icon-arrow-catalog"></span>
-                </a>
-                <a href="/" class="main-menu-elt">
-                    <div class="logo-1">
-                        <span class="icon-fashion"><span class="path1"></span><span class="path2"></span><span
-                                class="path3"></span><span class="path4"></span><span class="path5"></span></span>
-                    </div>
-                    <p>Спецодежда и СИЗ</p>
-                    <span class="icon-drop icon-drop-right icon-arrow-catalog"></span>
-                </a>
-                <a href="/" class="main-menu-elt">
-                    <div class="logo-1">
-                        <span class="icon-syringe"><span class="path1"></span><span class="path2"></span><span
-                                class="path3"></span></span>
-                    </div>
-                    <p>Медицинские расходные материалы</p>
-                    <span class="icon-drop icon-drop-right icon-arrow-catalog"></span>
-                </a>
-                <a href="/" class="main-menu-elt">
-                    <div class="logo-1">
-                        <span class="icon-dish"><span class="path1"></span><span class="path2"></span><span
-                                class="path3"></span><span class="path4"></span><span class="path5"></span><span
-                                class="path6"></span><span class="path7"></span><span class="path8"></span><span
-                                class="path9"></span><span class="path10"></span><span class="path11"></span></span>
-                    </div>
-                    <p>Автокосметика</p>
-                    <span class="icon-drop icon-drop-right icon-arrow-catalog"></span>
-                </a>
-                <a href="/" class="main-menu-elt">
-                    <div class="logo-1">
-                        <span class="icon-school-material"><span class="path1"></span><span class="path2"></span><span
-                                class="path3"></span><span class="path4"></span><span class="path5"></span><span
-                                class="path6"></span></span>
-                    </div>
-                    <p>Товары для офиса и дома</p>
-                    <span class="icon-drop icon-drop-right icon-arrow-catalog"></span>
-                </a>
-                <a href="/" class="main-menu-elt">
-                    <div class="logo-1">
-                        <span class="icon-shopping-bag"><span class="path1"></span><span class="path2"></span><span
-                                class="path3"></span><span class="path4"></span><span class="path5"></span><span
-                                class="path6"></span><span class="path7"></span><span class="path8"></span><span
-                                class="path9"></span><span class="path10"></span></span>
-                    </div>
-                    <p>Пакеты</p>
-                    <span class="icon-drop icon-drop-right icon-arrow-catalog"></span>
-                </a>
             </div>
             <div class="banner-and-tabs">
                 <div class="banner-scroll">
@@ -2992,15 +3055,15 @@
                 </div>
                 <a class="popup-close a-blue-hover black-text">
                     <span class="icon-close"></span>
-                </a>    
+                </a>
             </div>
             <div class="popup-content city__select__content">
                 <div class="flex-col city__select__col mb24">
                     <div data-type="city-tag" class="black-text head-text mb12">Популярные города</div>
-                        <a data-type="city-name" data-popular-city="t" class="a-blue-hover">Москва</a>
-                        <a data-type="city-name" data-popular-city="t" class="a-blue-hover">Санкт-Петербург</a>
-                        <a data-type="city-name" data-popular-city="t" class="a-blue-hover">Нижний Новгород</a>
-                        <a data-type="city-name" data-popular-city="t" class="a-blue-hover">Казань</a>
+                    <a data-type="city-name" data-popular-city="t" class="a-blue-hover">Москва</a>
+                    <a data-type="city-name" data-popular-city="t" class="a-blue-hover">Санкт-Петербург</a>
+                    <a data-type="city-name" data-popular-city="t" class="a-blue-hover">Нижний Новгород</a>
+                    <a data-type="city-name" data-popular-city="t" class="a-blue-hover">Казань</a>
 
 
                 </div>
@@ -3047,7 +3110,7 @@
                     Не нашли свой город?
                 </div>
                 <input data-type="city-search" data-lang="ru" class="input-search" type="text" name="search"
-                                placeholder="Введите название вашего города" autocomplete="off"></input>
+                    placeholder="Введите название вашего города" autocomplete="off"></input>
             </div>
 
         </div>
